[build-system]
requires = ['Django', 'setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ['py37']

[tool.coverage.run]
branch = true
source = ['django_cryptography']

[tool.coverage.report]
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]
ignore_errors = true
omit = ['docs/*', 'tests/*']

[tool.django-stubs]
django_settings_module = 'tests.settings'

[tool.isort]
profile = 'black'

[tool.mypy]
plugins = ['mypy_django_plugin.main']

[[tool.mypy.overrides]]
module = ['appconf']
ignore_missing_imports = true

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "E", # pycodestyle (Error)
    "ERA", # eradicate
    "F", # Pyflakes
    "I", # isort
    "RUF", # Ruff-specific
    "TCH", # flake8-type-checking
    "UP", # pyupgrade
    "W", # pycodestyle (Warning)

]
exclude = ["docs"]
target-version = "py37"

[tool.ruff.per-file-ignores]
"tests/*" = ["ERA"]

[tool.tox]
# language=ini
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    {py37,py38,py39,py310}-django32,
    {py38,py39,py310}-django41,
    {py38,py39,py310,py311}-django42,
    {py310,py311}-djangomain,
isolated_build = True

[testenv]
deps =
    coverage[toml]
    django32: Django>=3.2,<3.3
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<4.3
    djangomain: https://github.com/django/django/archive/main.tar.gz
commands =
    {envpython} -m coverage run --context='{envname}' runtests.py {posargs}
"""
